--- a/WebWrapper3/WebWrapper3/Resources/Localization/Localizable.strings
+++ b/WebWrapper3/WebWrapper3/Resources/Localization/Localizable.strings
@@ -1,3 +1,3 @@
-"ButtonBackTitle" = "Back";
-"ButtonForwardTitle" = "Forward";
-"ButtonHomeTitle" = "Homepage";
+"ReturnButtonTitle" = "Back";
+"MainPageButtonTitle" = "Forward";
+"NextButtonTitle" = "Homepage";
